--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,14 @@
 .Rhistory
 .RData
 .Ruserdata
+*.dbf
+*.prj
+*.shp
+*.shx
+DIMA_kita/team2/2020년_버스노선별_정류장별_시간대별_승하차_인원_정보.csv
+DIMA_kita/team2/seoul_id.csv
+DIMA_kita/team2/서울 용도지역 현황 통계.xls
+DIMA_kita/team2/서울시 인구밀도(동별) 통계.xls
+DIMA_kita/team2/서울특별시 버스노선 혼잡도 예측을 통한 다람쥐버스 신규 노선제안(장려).pdf
+DIMA_kita/team2/시내버스 2022.01월 인가현황_TOPIS.xlsx
+DIMA_kita/team2/통신 모바일 인구이동량 통계(2022년 3월 4주차).xlsx
