--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@ DIMA_kita/team2/서울시 인구밀도(동별) 통계.xls
 DIMA_kita/team2/서울특별시 버스노선 혼잡도 예측을 통한 다람쥐버스 신규 노선제안(장려).pdf
 DIMA_kita/team2/시내버스 2022.01월 인가현황_TOPIS.xlsx
 DIMA_kita/team2/통신 모바일 인구이동량 통계(2022년 3월 4주차).xlsx
+DIMA_kita/z_test.csv
+DIMA_kita/겅기도 주민등록인구현황(2022년2월).xlsx
+DIMA_kita/team2/n61_busdata.xlsx
+DIMA_kita/team2/대한민국 용도지역(시군구별).xls
